--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <main>
         This is text from second_branch
     </main>
+
+    <footer>
+        This is footer from third_branch
+    </footer>
 </body>
 </html>
