add section and footer
add section and footer

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
     <main>
         This is text from second_branch
     </main>
+
+    <section>
+        This is section 
+    </section>
+
+    <footer>
+        This is footer
+    </footer>
 </body>
 </html>
